feat: Refactor CSS into modular structure and introduce Vite
This commit refactors the existing CSS into a modular, component-based structure
for better organization, maintainability, and scalability.

- Introduces , , , and
   directories to house related styles.
- Moves global styles, typography, and variables to .
- Organizes component-specific styles (buttons, content, icons, popovers, resume)
  into .
- Separates layout-related styles (footer, header, structure) into .
- Extracts animations and view transition related styles into .
- Migrates the project to use Vite as the build tool, replacing previous build configurations.
- Updates  and  with Vite dependencies and scripts.
- Modifies , , and  to reflect
  the new CSS structure and potentially integrate with Vite's development server.
- Updates  for CI/CD compatibility with Vite.
- Deletes  and the old  and  files
  as part of the refactoring and build process changes.

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             }, 2000);
         });
     </script>
-    <script src="scripts/analytics.js" defer></script>
+    <script src="scripts/analytics.js" type="module" defer></script>
 </body>
 
 </html>
