--- a/resume.html
+++ b/resume.html
@@ -287,7 +287,7 @@
     </ul>
     <p class="copyright">© Robert James</p>
   </footer>
-  <script src="scripts/analytics.js" defer></script>
+  <script src="scripts/analytics.js" type="module" defer></script>
 </body>
 
 </html>
