add labs/experiments page

--- a/lab.html
+++ b/lab.html
@@ -77,25 +77,57 @@
       </ul>
     </nav>
   </header>
-  <main id="about">
-    <div class="cover">
-
-      <p>example</p>
-      <p class="codepen" data-height="400" data-theme-id="47566" data-default-tab="result" data-slug-hash="oNOYMYM"
-        data-pen-title="Microsoft-logo-proto" data-user="rmjames" data-token="de4f616f6e0aea6779262aec5b1dd329"
-        style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-        <span>See the Pen <a href="https://codepen.io/rmjames/pen/oNOYMYM/de4f616f6e0aea6779262aec5b1dd329">
-            Microsoft-logo-proto</a> by Robert James (<a href="https://codepen.io/rmjames">@rmjames</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-
-
-    </div>
+  <main id="about" class="lab-container">
+    <section class="demo-examples">
+      <article>
+        <iframe src="lab/media-player.html" title="Media Player" loading="lazy" allow="vibration"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/microsoft-logo.html" title="Microsoft Logo Proto" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/headphones.html" title="Headphones Knock" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/emoji-speaker.html" title="Emoji Speaker Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/framer-loaders.html" title="Framer Loaders Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/google-loader.html" title="Google Loader Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/framer-flows.html" title="Framer Flows Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/google-search-loader.html" title="Google Search Loader Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/framer-logo.html" title="Framer Logo Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/figma-logo.html" title="Figma Logo Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+      <article>
+        <iframe src="lab/buttons-custom-properties.html" title="Buttons with Custom Properties Animation" loading="lazy"
+          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+      </article>
+    </section>
   </main>
   <footer class="footer-menu">
     <ul>
-      <li class="footer-menu--item onEnter" style='--delay: .54s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
           <svg id="icon-linkedIn" role="img" aria-label='LinkedIn Icon' style="width:2em;height:2em"
             viewbox="0 0 24 24">
@@ -105,7 +137,7 @@
           <p class='icon-text'>LinkedIn</p>
         </a>
       </li>
-      <li class="footer-menu--item onEnter" style='--delay: .5s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener">
           <svg id="icon-github" role="img" aria-label='Github Icon' style="width:2em;height:2em" viewbox="0 0 24 24">
             <title>Github icon</title>
@@ -125,7 +157,7 @@
           <p>Codepen</p>
         </a>
       </li>
-      <li class="footer-menu--item onEnter" style='--delay: .48s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
           <svg id="icon-twitter" role="img" aria-label="Twitter Icon" style="width:2em;height:2em" viewbox="0 0 24 24">
             <title>Twitter icon</title>
@@ -134,7 +166,7 @@
           <p class='icon-text'>X</p>
         </a>
       </li>
-      <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
         <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
           <svg id="icon-email" role="img" aria-label="Email Icon" style="width:2em;height:2em" viewBox="0 0 24 24">
             <use href="#email"></use>
