add link to lab & update sw.js cache

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 </span>
             </p>
             <p class="about-item">
-                If you'd like to discuss a project, review some work or just say hello, feel free to
+                If you'd like to discuss a project, review some <a class="link-contact" href="lab.html">work</a> or just
+                say hello, feel free
+                to
                 <a aria-label="Send email to contact Robert James" id="contact" class="link-contact"
                     href="mailto:rma.james@gmail.com?Subject=Inquiry" data-analytics-link="Contact">contact</a>
                 me
