--- a/lab.html
+++ b/lab.html
@@ -80,44 +80,44 @@
   <main id="about" class="lab-container">
     <section class="demo-examples">
       <article>
-        <iframe src="lab/microsoft-logo.html" title="Microsoft Logo Proto" loading="lazy"
+        <iframe src="/lab/microsoft-logo.html" title="Microsoft Logo Proto" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/headphones.html" title="Headphones Knock" loading="lazy"
+        <iframe src="/lab/headphones.html" title="Headphones Knock" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/emoji-speaker.html" title="Emoji Speaker Animation" loading="lazy"
+        <iframe src="/lab/emoji-speaker.html" title="Emoji Speaker Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/framer-loaders.html" title="Framer Loaders Animation" loading="lazy"
+        <iframe src="/lab/framer-loaders.html" title="Framer Loaders Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/google-loader.html" title="Google Loader Animation" loading="lazy"
+        <iframe src="/lab/google-loader.html" title="Google Loader Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/framer-flows.html" title="Framer Flows Animation" loading="lazy"
+        <iframe src="/lab/framer-flows.html" title="Framer Flows Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/google-search-loader.html" title="Google Search Loader Animation" loading="lazy"
+        <iframe src="/lab/google-search-loader.html" title="Google Search Loader Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/framer-logo.html" title="Framer Logo Animation" loading="lazy"
+        <iframe src="/lab/framer-logo.html" title="Framer Logo Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/figma-logo.html" title="Figma Logo Animation" loading="lazy"
+        <iframe src="/lab/figma-logo.html" title="Figma Logo Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
       <article>
-        <iframe src="lab/buttons-custom-properties.html" title="Buttons with Custom Properties Animation" loading="lazy"
-          style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
+        <iframe src="/lab/buttons-custom-properties.html" title="Buttons with Custom Properties Animation"
+          loading="lazy" style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
     </section>
   </main>
