remove scroll snap

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </header>
     <main id="about" data-analytics-section="About">
         <div class="cover about">
-            <p class="about-item onEnter" style="--delay: 0.32s">
+            <p class="about-item">
                 <span class="headline">I'm a UX Engineer who designs and builds digital experiences and products.</span>
                 Over the years, I've had the privilege of collaborating on digital products for companies like
                 <span class="brands">
@@ -210,7 +210,7 @@
     </div>
     <footer class="footer-menu">
         <ul>
-            <li class="footer-menu--item onEnter" style="--delay: 0.54s" role="listitem">
+            <li class="footer-menu--item" role="listitem">
                 <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
                     <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" style="width: 1.5rem; height: 1.5rem"
                         viewbox="0 0 24 24">
@@ -220,7 +220,7 @@
                     <p class="icon-text">LinkedIn</p>
                 </a>
             </li>
-            <li class="footer-menu--item onEnter" style="--delay: 0.5s" role="listitem">
+            <li class="footer-menu--item" role="listitem">
                 <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener">
                     <svg id="icon-github" role="img" aria-label="Github Icon" style="width: 1.5rem; height: 1.5rem"
                         viewbox="0 0 24 24">
@@ -240,7 +240,7 @@
                     <p>Codepen</p>
                 </a>
             </li>
-            <li class="footer-menu--item onEnter" style="--delay: 0.48s" role="listitem">
+            <li class="footer-menu--item" role="listitem">
                 <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
                     <svg id="icon-twitter" role="img" aria-label="Twitter Icon" style="width: 1.5rem; height: 1.5rem"
                         viewbox="0 0 24 24">
@@ -250,7 +250,7 @@
                     <p class="icon-text">X</p>
                 </a>
             </li>
-            <li class="footer-menu--item onEnter" style="--delay: 0.44s" role="listitem">
+            <li class="footer-menu--item" role="listitem">
                 <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
                     <svg id="icon-email" role="img" aria-label="Email Icon" style="width: 1.5rem; height: 1.5rem"
                         viewBox="0 0 24 24">
