--- a/pattern-library.html
+++ b/pattern-library.html
@@ -84,7 +84,7 @@
     <article>
       <h2>Motion</h2>
       <section class='motion'>
-        <div class='asset motion-item background-mid onEnter' style='--space: var(--xl);--deg: 2px'></div>
+        <div class='asset motion-item background-mid' style='--space: var(--xl);--deg: 2px'></div>
         <button class='button-state'></button>
       </section>
     </article>
