--- a/index.html
+++ b/index.html
@@ -68,11 +68,6 @@
     </svg>
     <header class="header">
         <h1><a href="/">robert james</a></h1>
-        <nav>
-            <ul>
-                <li class="header-nav-item"><a href="/resume.html">resume</a></li>
-            </ul>
-        </nav>
     </header>
     <main id="about" data-analytics-section="About">
         <div class="cover about">
@@ -210,6 +205,11 @@
     </div>
     <footer class="footer-menu">
         <ul>
+            <li class="footer-menu--item" role="listitem">
+                <a href="/resume.html" class="resume">
+                    <p class="icon-text">Resume</p>
+                </a>
+            </li>
             <li class="footer-menu--item" role="listitem">
                 <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
                     <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" style="width: 1.5rem; height: 1.5rem"
