--- a/lab.html
+++ b/lab.html
@@ -71,11 +71,6 @@
   </svg>
   <header class="header">
     <h1><a href="index.html">robert james</a></h1>
-    <nav>
-      <ul>
-        <li class="nav-item"><a href="/resume.html">resume</a></li>
-      </ul>
-    </nav>
   </header>
   <main id="about" class="lab-container">
     <section class="demo-examples">
@@ -123,6 +118,11 @@
   </main>
   <footer class="footer-menu">
     <ul>
+      <li class="footer-menu--item" role='listitem'>
+        <a href="/resume.html" class="resume">
+          <p class='icon-text'>Resume</p>
+        </a>
+      </li>
       <li class="footer-menu--item" role='listitem'>
         <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
           <svg id="icon-linkedIn" role="img" aria-label='LinkedIn Icon' style="width:2em;height:2em"
