--- a/resume.html
+++ b/resume.html
@@ -83,11 +83,6 @@
   </svg>
   <header class="header">
     <h1><a href="/">robert james</a></h1>
-    <nav>
-      <ul>
-        <li class="header-nav-item"><a href="/resume.html">resume</a></li>
-      </ul>
-    </nav>
   </header>
   <main class="resume-container" data-analytics-section="Resume">
     <p class="bio">Senior Developer with over 10 years of experience in the consulting and educating space designing and
@@ -234,6 +229,11 @@
   </main>
   <footer class="footer-menu">
     <ul>
+      <li class="footer-menu--item" role='listitem'>
+        <a href="/resume.html" class="resume">
+          <p class='icon-text'>Resume</p>
+        </a>
+      </li>
       <li class="footer-menu--item" role='listitem'>
         <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
           <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" style="width:1.5rem;height:1.5rem"
