--- a/resume.html
+++ b/resume.html
@@ -83,11 +83,6 @@
   </svg>
   <header class="header">
     <h1><a href="/">robert james</a></h1>
-    <nav>
-      <ul>
-        <li class="header-nav-item"><a href="/resume.html">resume</a></li>
-      </ul>
-    </nav>
   </header>
   <main class="resume-container" data-analytics-section="Resume">
     <p class="bio">Senior Developer with over 10 years of experience in the consulting and educating space designing and
@@ -234,7 +229,12 @@
   </main>
   <footer class="footer-menu">
     <ul>
-      <li class="footer-menu--item onEnter" style='--delay: .54s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
+        <a href="/resume.html" class="resume">
+          <p class='icon-text'>Resume</p>
+        </a>
+      </li>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
           <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" style="width:1.5rem;height:1.5rem"
             viewbox="0 0 24 24">
@@ -244,7 +244,7 @@
           <p class='icon-text'>LinkedIn</p>
         </a>
       </li>
-      <li class="footer-menu--item onEnter" style='--delay: .5s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener">
           <svg id="icon-github" role="img" aria-label="Github Icon" style="width:1.5rem;height:1.5rem"
             viewbox="0 0 24 24">
@@ -265,7 +265,7 @@
           <p>Codepen</p>
         </a>
       </li>
-      <li class="footer-menu--item onEnter" style='--delay: .48s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
           <svg id="icon-twitter" role="img" aria-label="Twitter Icon" style="width:1.5rem;height:1.5rem"
             viewbox="0 0 24 24">
@@ -275,7 +275,7 @@
           <p class='icon-text'>X</p>
         </a>
       </li>
-      <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
+      <li class="footer-menu--item" role='listitem'>
         <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
           <svg id="icon-email" role="img" aria-label="Email Icon" style="width:1.5rem;height:1.5rem"
             viewBox="0 0 24 24">
