add analytics to lab.html

--- a/lab.html
+++ b/lab.html
@@ -173,6 +173,7 @@
     </ul>
     <p class="copyright">© Robert James 2025</p>
   </footer>
+  <script src="scripts/lab-analytics.js" type="module" defer></script>
 </body>
 
 </html>
