--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                 </span>
             </p>
             <p class="about-item">
-                If you'd like to discuss a project, review some <a class="link-contact" href="lab.html">work</a> or just
+                If you'd like to discuss a project, review some <a class="link-contact" href="lab.html"
+                    data-analytics-link="Work">work</a> or just
                 say hello, feel free
                 to
                 <a aria-label="Send email to contact Robert James" id="contact" class="link-contact"
