add analytics to resume

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <footer class="footer-menu">
         <ul>
             <li class="footer-menu--item" role="listitem">
-                <a href="/resume.html" class="resume">
+                <a href="/resume.html" class="resume" data-analytics-link="Resume">
                     <p class="icon-text">Resume</p>
                 </a>
             </li>
