--- a/lab.html
+++ b/lab.html
@@ -119,7 +119,7 @@
   <footer class="footer-menu">
     <ul>
       <li class="footer-menu--item" role='listitem'>
-        <a href="/resume.html" class="resume">
+        <a href="/resume.html" class="resume" data-analytics-link="Resume">
           <p class='icon-text'>Resume</p>
         </a>
       </li>
