--- a/resume.html
+++ b/resume.html
@@ -230,7 +230,7 @@
   <footer class="footer-menu">
     <ul>
       <li class="footer-menu--item" role='listitem'>
-        <a href="/resume.html" class="resume">
+        <a href="/resume.html" class="resume" data-analytics-link="Resume">
           <p class='icon-text'>Resume</p>
         </a>
       </li>
