--- a/lab/headphones.html
+++ b/lab/headphones.html
@@ -142,8 +142,7 @@
     <div class='note'>🎶</div>
     <div class='notes'>🎶</div>
     <button class="toggle-btn" aria-label="Pause animation">
-        <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px"
-            fill="currentColor">
+        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor">
             <path
                 d="M528-192v-576h240v576H528Zm-336 0v-576h240v576H192Zm408-72h96v-432h-96v432Zm-336 0h96v-432h-96v432Zm0-432v432-432Zm336 0v432-432Z" />
         </svg>
